--- a/game/style.css
+++ b/game/style.css
@@ -41,7 +41,7 @@
   height: 100%;
   background-position: 0px 0px;
   background-size: contain;
-  backdrop-filter: blur(2px);
+  backdrop-filter: blur(0px);
   z-index: 1;
 }
 
@@ -58,12 +58,13 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.5);
   color: white;
   font-size: 20px;
   text-align: center;
   z-index: 120;
 }
+
 #titleName {
   border-bottom: 2px solid #4caf50;
   position: relative;
@@ -196,20 +197,47 @@
   position: absolute;
   top: 10px;
   right: 20px;
-  font-size: 25px;
+  font-size: 15px;
   color: aliceblue;
   /* display: none; */
 }
 
 #gameover_screen {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.7);
   color: white;
-  font-size: 30px;
+  font-size: 20px;
   text-align: center;
-  line-height: 300px;
   display: none;
   z-index: 100;
+  padding-top: 110px;
+}
+
+#gameover_msg {
+  display: block;
+  position: relative;
+  width: 100%;
+  background-color: white;
+  color: rgb(75, 75, 75);
+  font-size: small;
+  padding: 5px 0px;
+  /* line-height: 130%; */
+}
+
+#retryButton {
+  display: block;
+  margin: 0 auto;
+  padding: 5px 10px;
+  font-size: 15px;
+  background-color: #fff;
+  color: #4caf50;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
