--- a/game/style.css
+++ b/game/style.css
@@ -15,9 +15,9 @@
 
 #container {
   display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
   position: absolute;
   /* left: 100px; */
@@ -25,7 +25,7 @@
   height: 300px;
   /* border: 1px black solid; */
 
-  /* overflow: hidden; */
+  overflow: hidden;
   background-image: url("src/forest.jpg");
   background-position: 0px 0px;
   /* background-repeat: repeat; */
@@ -45,11 +45,10 @@
   z-index: 1;
 }
 
-
 /* 오브젝트 경계선 확인용 */
-#container img {
+/* #container img {
   border: 1px solid white;
-}
+} */
 
 #start_screen {
   display: flex;
@@ -111,7 +110,7 @@
   font-size: 48px;
   font-weight: bold;
   /* color: #ffd000; */
-  color: #fff;
+  color: #ffc800;
   /* background-color: white; */
   border-radius: 5px;
   z-index: 500;
@@ -170,9 +169,6 @@
   left: 0;
 }
 
-
-
-
 .toEat {
   position: absolute;
   width: 40px;
@@ -205,7 +201,6 @@
   transform: scaleX(-1);
 }
 
-
 #goose {
   position: absolute;
   width: 50px;
@@ -233,7 +228,6 @@
   /* display: none; */
 }
 
-
 #house {
   position: absolute;
   width: 300px;
@@ -244,7 +238,132 @@
   /* display: none; */
 }
 
+#clearStar {
+  /* background-color: #4caf50; */
+  display: inline-block;
+  margin: 0 auto;
+  width: 20px;
+  /* transform: rotateY('0deg'); */
+  animation: rotate_image 0.4s linear infinite;
+  /* transform-origin: 50% 50%; */
 
+  /* border: 1px solid white; */
+  /* background-color: aliceblue; */
+  /* display: none; */
+}
+
+@keyframes rotate_image {
+  0% {
+    transform: rotateY(0deg);
+    filter: brightness(30%);
+  }
+  100% {
+    transform: rotateY(360deg);
+  }
+}
+
+/* 클리어화면 */
+#gameclear_screen {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  box-sizing: border-box;
+  transition: all 3s ease-in-out;
+  /* border: 3px dashed #4caf50; */
+  color: #fff;
+  font-size: 20px;
+  text-align: center;
+  /* display: none; */
+  z-index: 150;
+}
+
+#topframe {
+  background-color: black;
+  position: absolute;
+  width: 100%;
+  height: 50px;
+  top: 0px;
+  z-index: 200;
+  animation: closing 3s alternate;
+  /* -webkit-animation: closing 3s alternate; */
+}
+@keyframes closing {
+  0% {
+    height: 0px;
+  }
+  100% {
+    height: 50px;
+  }
+}
+
+#bottomframe {
+  background-color: black;
+  position: absolute;
+  width: 100%;
+  height: 50px;
+  bottom: 0px;
+  z-index: 200;
+  animation: closing 3s alternate;
+}
+@keyframes closing {
+  0% {
+    height: 0px;
+  }
+  100% {
+    height: 50px;
+  }
+}
+
+#gameclear_msg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 20px;
+  font-size: 30px;
+  z-index: 200;
+}
+#gameclear_text {
+  position: absolute;
+  width: 100%;
+  bottom: 20px;
+  z-index: 200;
+  font-size: 15px;
+  text-align: center;
+  color: #fff;
+}
+
+#sleeping-hari {
+  position: absolute;
+  margin: 0 auto;
+  animation: show_image fadein 5s;
+  animation: zoomin 8s;
+  width: 600px;
+  /* animation: jump 0.5s ease-in-out; */
+  /* transform: rotate3d(0, 0, 90, 90deg); */
+  display: block;
+}
+@keyframes show_image {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes zoomin {
+  from {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(1.1);
+  }
+}
+  
 
 
 #gameover_screen {
@@ -261,7 +380,6 @@
   text-align: center;
   display: none;
   z-index: 130;
-  /* padding-top: 200px; */
 }
 
 #gameover_msg {
@@ -274,7 +392,6 @@
   padding: 5px 0px;
   margin-top: 100px;
   margin-bottom: 5px;
-  /* line-height: 130%; */
 }
 
 #retryButton {
