--- a/async/exam05.css
+++ b/async/exam05.css
@@ -6,20 +6,24 @@
 
 body {
   font-family: "Pretendard-Regular";
-  background-color: beige;
+  background-color: black;
   margin: 0;
 }
 
 /* MOVIE LIST */
 header {
-  background-color: royalblue;
+  /* background-color: linear-gradient(90deg, royalblue); */
+  position: sticky;
+  top: 0;
+  background: linear-gradient(0deg, black,royalblue);
   font-weight: 500;
   width: 100%;
-  height: 200px;
+  height: 150px;
   color: #fff;
   padding: 10px;
-  font-size: 100px;
+  font-size: 80px;
   text-align: center;
+  z-index: 5;
 }
 
 /* 전체 컨텐츠 소속 */
@@ -39,11 +43,12 @@ header {
   width: 200px;
   height: 300px;
   /* padding: 10px; */
+  border-radius: ;
   cursor: pointer;
   display: flex;
   align-items: flex-start;
   position: relative;
-  background-color: grey;
+  /* background-color: yellow; */
   margin: 20px;
 }
 
@@ -54,6 +59,7 @@ header {
   /* height: 350px; */
   /* margin-bottom: 30px; */
   bottom: 0px;
+  border-radius: 10px;
 }
 
 /* 포스터에 마우스 올리면 */
@@ -72,10 +78,10 @@ header {
   box-sizing: border-box;
   width: 100%;
   height: 30%;
-  padding: 10px 10px 3px 10px;
+  padding: 10px 10px 5px 10px;
   /* font-size: 15px; */
   color: white;
-  background: linear-gradient(0deg, royalblue, black, transparent);
+  background: linear-gradient(0deg, royalblue,black, transparent);
   /* font-weight:bolder; */
 }
 
